--- a/app.json
+++ b/app.json
@@ -1,15 +1,29 @@
 {
   "expo": {
-    "name": "Hearts",
-    "icon": "./assets/heartIcon.png",
-    "version": "1.0.0",
+    "name": "hearts",
     "slug": "hearts",
-    "sdkVersion": "27.0.0",
-    "ios": {
-      "bundleIdentifier": "com.karky.hearts"
+    "privacy": "public",
+    "sdkVersion": "32.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
-    "android": {
-      "package": "com.karky.hearts"
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
     }
   }
 }
